calicoctl/test-data/convert/output/v1/bgppeer-node.yaml
apiVersion: projectcalico.org/v3
kind: BGPPeer
metadata:
  creationTimestamp: null
  name: node1.00aa-00bb-0000-0000-0000-0000-0000-00ff
spec:
  asNumber: 64514
  node: node1
  peerIP: aa:bb::ff
