calicoctl/test-data/convert/output/v1/bgppeer-node2.yaml
apiVersion: projectcalico.org/v3
kind: BGPPeer
metadata:
  creationTimestamp: null
  name: node2.1-2-3-4
spec:
  asNumber: 6455
  node: node2
  peerIP: 1.2.3.4
