calicoctl/test-data/convert/output/v1/test3.json
{
  "kind": "GlobalNetworkPolicy",
  "apiVersion": "projectcalico.org/v3",
  "metadata": {
    "name": "default.policy1",
    "creationTimestamp": null,
    "labels": {
      "projectcalico.org/tier": "default"
    }
  },
  "spec": {
    "tier": "default",
    "order": 100,
    "ingress": [
      {
        "action": "Deny",
        "source": {
          "selector": "type=='application'"
        },
        "destination": {}
      }
    ],
    "selector": "type=='database'",
    "types": [
      "Ingress"
    ]
  }
}
