calicoctl/test-data/convert/output/v1/test3.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    projectcalico.org/tier: default
  name: default.policy1
spec:
  ingress:
  - action: Deny
    destination: {}
    source:
      selector: type=='application'
  order: 100
  selector: type=='database'
  tier: default
  types:
  - Ingress
